--- a/R_markdown.Rmd
+++ b/R_markdown.Rmd
@@ -1,8 +1,11 @@
 ---
-title: "@@Add title"
-author: "Katerin Kunfermann, Haylee Kelsall 11665424, Louelle Pesurnaij 12225223@@@@add names, Student numbers etc"
+title: '@@Add title'
+author: Katerin Kunfermann, Haylee Kelsall 11665424, Louelle Pesurnaij 12225223@@@@add
+  names, Student numbers etc
 date: "17 January 2019"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
